install material ui and added websocket middleware

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,12 @@
+:root {
+  --gray: #B7C4CF;
+  --brown-darkest: #594545;
+  --brown-darkier: #815B5B;
+  --brown-dark: #967E76;
+  --brown-medium: #D7C0AE;
+  --brown-light: #EEE3CB;
+}
+
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
