--- a/frontend/src/components/NotFound/NotFound.css
+++ b/frontend/src/components/NotFound/NotFound.css
@@ -1,7 +1,7 @@
 .not-found {
     height: 100vh;
-    background: var(--brown-light);
-    color: var(--brown-darkest);
+    background: var(--yellow-pastel);
+    color: var(--black-sea);
     display: flex;
     flex-direction: column;
     justify-content: center;
